--- a/DirectShowFilters/DirectShowHelper/dshowhelper.vcxproj
+++ b/DirectShowFilters/DirectShowHelper/dshowhelper.vcxproj
@@ -142,7 +142,6 @@
     <ClCompile Include="source\EVRCustomPresenter.cpp" />
     <ClCompile Include="source\GrabBitmaps.cpp" />
     <ClCompile Include="source\MadPresenter.cpp" />
-    <ClCompile Include="source\MadSubtitleProxy.cpp" />
     <ClCompile Include="source\OuterEVR.cpp" />
     <ClCompile Include="source\Scheduler.cpp" />
     <ClCompile Include="source\StatsRenderer.cpp" />
@@ -156,14 +155,15 @@
     <ClInclude Include="source\dshowhelper.h" />
     <ClInclude Include="source\DX9AllocatorPresenter.h" />
     <ClInclude Include="source\EVRCustomPresenter.h" />
+    <ClInclude Include="source\Geometry.h" />
     <ClInclude Include="source\IAVSyncClock.h" />
     <ClInclude Include="source\IMF.h" />
     <ClInclude Include="source\MadPresenter.h" />
-    <ClInclude Include="source\MadSubtitleProxy.h" />
     <ClInclude Include="source\mvrInterfaces.h" />
     <ClInclude Include="source\MyQueue.h" />
     <ClInclude Include="source\OuterEVR.h" />
     <ClInclude Include="source\Scheduler.h" />
+    <ClInclude Include="source\smartptr.h" />
     <ClInclude Include="source\StatsRenderer.h" />
     <ClInclude Include="source\StdAfx.h" />
     <ClInclude Include="source\StdString.h" />
