--- a/mediaportal/MediaPortal.Application/App.config
+++ b/mediaportal/MediaPortal.Application/App.config
@@ -32,6 +32,13 @@
           culture="neutral" />
         <bindingRedirect oldVersion="1.5.0.29053-1.5.0.29112" newVersion="1.5.0.29113" />
       </dependentAssembly>
+    <assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0" xmlns:asmv3="urn:schemas-microsoft-com:asm.v3" >
+      <asmv3:application>
+        <asmv3:windowsSettings xmlns="http://schemas.microsoft.com/SMI/2005/WindowsSettings">
+          <dpiAware>True/PM</dpiAware>
+       </asmv3:windowsSettings>
+      </asmv3:application>
+    </assembly>
     </assemblyBinding>
     <loadFromRemoteSources enabled="true"/>
   </runtime>
