TsMuxer and TsWriter: encapsulate platform-specific thread stuff in a class. Simplifies platform independence to a matter of class implementations rather than patching code here, there and everywhere.

--- a/DirectShowFilters/DvbCoreUtils/DvbCoreUtils.vcxproj
+++ b/DirectShowFilters/DvbCoreUtils/DvbCoreUtils.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="PidTable.cpp" />
     <ClCompile Include="Section.cpp" />
     <ClCompile Include="SectionDecoder.cpp" />
+    <ClCompile Include="Thread.cpp" />
     <ClCompile Include="TsHeader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +112,7 @@
     <ClInclude Include="..\shared\Section.h" />
     <ClInclude Include="..\shared\SectionDecoder.h" />
     <ClInclude Include="..\shared\stdafx.h" />
+    <ClInclude Include="..\shared\Thread.h" />
     <ClInclude Include="..\shared\TimeUtils.h" />
     <ClInclude Include="..\shared\TsHeader.h" />
   </ItemGroup>
