--- a/DirectShowFilters/DvbCoreUtils/DvbCoreUtils.vcxproj
+++ b/DirectShowFilters/DvbCoreUtils/DvbCoreUtils.vcxproj
@@ -89,7 +89,9 @@
   <ItemGroup>
     <ClCompile Include="AdaptionField.cpp" />
     <ClCompile Include="BasePmtParser.cpp" />
+    <ClCompile Include="CriticalSection.cpp" />
     <ClCompile Include="DvbUtil.cpp" />
+    <ClCompile Include="EnterCriticalSection.cpp" />
     <ClCompile Include="FileWriter.cpp" />
     <ClCompile Include="PacketSync.cpp" />
     <ClCompile Include="Pcr.cpp" />
@@ -102,8 +104,10 @@
   <ItemGroup>
     <ClInclude Include="..\shared\AdaptionField.h" />
     <ClInclude Include="..\shared\BasePmtParser.h" />
+    <ClInclude Include="..\shared\CriticalSection.h" />
     <ClInclude Include="..\shared\DebugSettings.h" />
     <ClInclude Include="..\shared\DvbUtil.h" />
+    <ClInclude Include="..\shared\EnterCriticalSection.h" />
     <ClInclude Include="..\shared\FileWriter.h" />
     <ClInclude Include="..\shared\ISectionCallback.h" />
     <ClInclude Include="..\shared\PacketSync.h" />
