--- a/DirectShowFilters/TsWriter/MPTSWriter.vcxproj
+++ b/DirectShowFilters/TsWriter/MPTSWriter.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="source\AtscNitParser.cpp" />
     <ClCompile Include="source\BaseScteParser.cpp" />
     <ClCompile Include="source\CaGrabber.cpp" />
+    <ClCompile Include="source\CDiskBuff.cpp" />
     <ClCompile Include="source\ChannelLinkageScanner.cpp" />
     <ClCompile Include="source\ChannelScan.cpp" />
     <ClCompile Include="source\DiskRecorder.cpp" />
@@ -206,6 +207,7 @@
   <ItemGroup>
     <ClInclude Include="source\AtscNitParser.h" />
     <ClInclude Include="source\CaGrabber.h" />
+    <ClInclude Include="source\CDiskBuff.h" />
     <ClInclude Include="source\ChannelLinkageScanner.h" />
     <ClInclude Include="source\ChannelScan.h" />
     <ClInclude Include="source\DiskRecorder.h" />
