IPTV source filter: add options to enable skipping non-essential RTSP commands. This change is specifically targeted at improving compatibility with the ATI CableCARD tuner. It may also improve compatibility with older firmware/drivers for HDHomeRun PRIME (pre 20130708beta1) and Hauppauge DCR (pre 2.4_20140121_32028) CableCARD tuners. More generally, it may improve compatibility with simple/"lite" RTSP server implementations.

--- a/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.ini
+++ b/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.ini
@@ -114,3 +114,10 @@ RtspCommandResponseTimeout                  = 500
 
 ; maximum attempts of opening connection
 RtspOpenConnectionMaximumAttempts           = 3
+
+; send the OPTIONS command during connection establishment: 0 = don't send (eg. for compatibility), 1 = send
+RtspSendCommandOptions                      = 1
+
+; send the DESCRIBE command during connection establishment: 0 = don't send (eg. for compatibility), 1 = send
+; when the command is not sent a default SDP session description "v=0 t=0 0 a=type:broadcast a=recvonly m=video 0 RTP/AVP 33" is assumed
+RtspSendCommandDescribe                     = 1
