SQLite update, switched to WAL mode to avoid locking of tables, modified EPG import logging

--- a/TvEngine3/TVLibrary/NuGet/MediaPortal.TvEngine.Core3/content/References/Gentle.config
+++ b/TvEngine3/TVLibrary/NuGet/MediaPortal.TvEngine.Core3/content/References/Gentle.config
@@ -59,7 +59,7 @@
             </NamespaceProviders>
             -->
   <!--<DefaultProvider name="MySQL" connectionString="Server=-;Database=MpTvDb;User ID=root;Password=MediaPortal;charset=utf8;Connection Timeout=300;" />-->
-  <DefaultProvider name="SQLite" connectionString="Data Source=C:\ProgramData\Team MediaPortal\MP2-Server\Database\MP2TVE_3.s3db;Pooling=true;FailIfMissing=true;Version=3" />
+  <DefaultProvider name="SQLite" connectionString="Data Source=C:\ProgramData\Team MediaPortal\MP2-Server\Database\MP2TVE_3.s3db;Pooling=true;FailIfMissing=true;Version=3;journal_mode=WAL;" />
   <!--
             <DefaultProvider name="Firebird" connectionString="User=SYSDBA;Password=masterkey;Data Source=TvLibrary.fdb;ServerType=1;Charset=UNICODE_FSS;" />
             <DefaultProvider name="Jet" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Code\Gentle.NET\Source\Gentle.Framework.Tests\Database Files\Gentle_MSAccess.mdb;OLE DB Services=-1;" />
