--- a/TvEngine3/TVLibrary/TvService/App.config
+++ b/TvEngine3/TVLibrary/TvService/App.config
@@ -35,6 +35,10 @@
         <assemblyIdentity name="Gentle.Provider.SQLServer" publicKeyToken="80b5de62e27be49b" culture="neutral"/>
         <bindingRedirect oldVersion="1.5.0.29053-1.5.0.29112" newVersion="1.5.0.29113"/>
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.103.0" newVersion="1.0.103.0"/>
+      </dependentAssembly>
     </assemblyBinding>
     <loadFromRemoteSources enabled="true"/>
   </runtime>
