Changes related to stream/IPTV tuner configuration: - integrate configuration into TVE Config (tuner config dialog and general section) - per-tuner config rather than global config - config stored in the database with all the other config rather than in a file - integrate network interface selection for HTTP/RTP/UDP streams (per-tuner though, not per-channel)

--- a/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TVDatabase/Entities/Entities.csproj
@@ -229,6 +229,11 @@
       <SubType>
       </SubType>
     </Compile>
+    <Compile Include="StreamTunerSettings.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+      <SubType>
+      </SubType>
+    </Compile>
     <Compile Include="Tuner.cs">
       <DependentUpon>Model.tt</DependentUpon>
       <SubType>
