--- a/TvEngine3/Mediaportal/TV/Server/TvLibrary.IntegrationProvider.Interfaces/TvLibrary.IntegrationProvider.Interfaces.csproj
+++ b/TvEngine3/Mediaportal/TV/Server/TvLibrary.IntegrationProvider.Interfaces/TvLibrary.IntegrationProvider.Interfaces.csproj
@@ -67,6 +67,12 @@
     <Compile Include="IPathManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Types\Common.Types.csproj">
+      <Project>{F9F4E5C1-9A6A-42F8-8452-4BDAFEA0E798}</Project>
+      <Name>Common.Types</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
