MP1-4847: Updated BASS libraries via Nuget to new version.

--- a/mediaportal/Databases/Databases.csproj
+++ b/mediaportal/Databases/Databases.csproj
@@ -298,6 +298,7 @@
     <Folder Include="Video\Ado\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
