--- a/mediaportal/Dialogs/Dialogs.csproj
+++ b/mediaportal/Dialogs/Dialogs.csproj
@@ -203,6 +203,9 @@
     <Compile Include="Dialogs\Helper\GUIResumeDialog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
