--- a/mediaportal/MediaPortal.Application/App.config
+++ b/mediaportal/MediaPortal.Application/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0.30319" />
@@ -31,6 +31,10 @@
           </asmv3:windowsSettings>
         </asmv3:application>
       </assembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Bass.Net" publicKeyToken="b7566c273e6ef480" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.10.3" newVersion="2.4.10.3" />
+      </dependentAssembly>
     </assemblyBinding>
     <loadFromRemoteSources enabled="true" />
   </runtime>
