--- a/mediaportal/WindowPlugins/GUIMusic/GUIMusic.csproj
+++ b/mediaportal/WindowPlugins/GUIMusic/GUIMusic.csproj
@@ -255,6 +255,9 @@
     <EmbeddedResource Include="Music.gif" />
     <EmbeddedResource Include="MusicDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
