--- a/mediaportal/WindowPlugins/GUISudoku/GUISudoku.csproj
+++ b/mediaportal/WindowPlugins/GUISudoku/GUISudoku.csproj
@@ -232,6 +232,9 @@
     <EmbeddedResource Include="Sudoku.gif" />
     <EmbeddedResource Include="SudokuDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
