--- a/mediaportal/WindowPlugins/GUITopbar/GUITopbar.csproj
+++ b/mediaportal/WindowPlugins/GUITopbar/GUITopbar.csproj
@@ -235,6 +235,9 @@
     <EmbeddedResource Include="Topbar.gif" />
     <EmbeddedResource Include="Topbar_disabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
