--- a/mediaportal/ProcessPlugins/MiniDisplay/MiniDisplayPlugin.csproj
+++ b/mediaportal/ProcessPlugins/MiniDisplay/MiniDisplayPlugin.csproj
@@ -198,6 +198,9 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
