--- a/mediaportal/ProcessPlugins/ProcessPlugins.csproj
+++ b/mediaportal/ProcessPlugins/ProcessPlugins.csproj
@@ -312,6 +312,9 @@
     <EmbeddedResource Include="LastFMScrobbler\LastFMScrobbler.gif" />
     <EmbeddedResource Include="LastFMScrobbler\LastFMScrobblerDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
