--- a/mediaportal/RemotePlugins/App.config
+++ b/mediaportal/RemotePlugins/App.config
@@ -1,12 +1,16 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="plugins\ExternalPlayers;plugins\process;plugins\subtitle;plugins\windows"/>
+      <probing privatePath="plugins\ExternalPlayers;plugins\process;plugins\subtitle;plugins\windows" />
+      <dependentAssembly>
+        <assemblyIdentity name="Bass.Net" publicKeyToken="b7566c273e6ef480" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.10.3" newVersion="2.4.10.3" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="version" value="1.2.2.0"/>
+    <add key="version" value="1.2.2.0" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0.30319" />
