--- a/mediaportal/SubtitlePlugins/SubtitlePlugins.csproj
+++ b/mediaportal/SubtitlePlugins/SubtitlePlugins.csproj
@@ -183,6 +183,9 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
