--- a/mediaportal/WindowPlugins/GUIDisc/GUIDisc.csproj
+++ b/mediaportal/WindowPlugins/GUIDisc/GUIDisc.csproj
@@ -230,6 +230,9 @@
     <EmbeddedResource Include="DVD.gif" />
     <EmbeddedResource Include="DVDDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
