--- a/mediaportal/WindowPlugins/GUIHome/GUIHome.csproj
+++ b/mediaportal/WindowPlugins/GUIHome/GUIHome.csproj
@@ -248,6 +248,9 @@
     <Content Include="resources\node.png" />
     <Content Include="resources\script.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
