--- a/mediaportal/WindowPlugins/GUIPictures/GUIPictures.csproj
+++ b/mediaportal/WindowPlugins/GUIPictures/GUIPictures.csproj
@@ -247,6 +247,9 @@
     <EmbeddedResource Include="Pictures.gif" />
     <EmbeddedResource Include="PicturesDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
