--- a/mediaportal/WindowPlugins/GUIRSSFeed/GUIRSSFeed.csproj
+++ b/mediaportal/WindowPlugins/GUIRSSFeed/GUIRSSFeed.csproj
@@ -271,6 +271,9 @@
     <EmbeddedResource Include="rssicon.png" />
     <EmbeddedResource Include="rssicon_disabled.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
