--- a/mediaportal/WindowPlugins/GUITetris/GUITetris.csproj
+++ b/mediaportal/WindowPlugins/GUITetris/GUITetris.csproj
@@ -231,6 +231,9 @@
     <EmbeddedResource Include="Tetris.gif" />
     <EmbeddedResource Include="TetrisDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
