--- a/mediaportal/WindowPlugins/GUIWikipedia/GUIWikipedia.csproj
+++ b/mediaportal/WindowPlugins/GUIWikipedia/GUIWikipedia.csproj
@@ -230,6 +230,9 @@
     <EmbeddedResource Include="Wikipedia.gif" />
     <EmbeddedResource Include="WikipediaDisabled.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
