--- a/mediaportal/Core/packages.config
+++ b/mediaportal/Core/packages.config
@@ -5,7 +5,7 @@
   <package id="bass.ac3" version="2.4.0.5" targetFramework="net40" />
   <package id="bass.alac" version="2.4.3" targetFramework="net40" />
   <package id="bass.ape" version="2.4.2.0" targetFramework="net40" />
-  <package id="BASS.ASIO" version="1.3.1.1" targetFramework="net40" />
+  <package id="bass.asio" version="1.3.1" targetFramework="net40" />
   <package id="bass.cd" version="2.4.6.0" targetFramework="net40" />
   <package id="bass.dsd" version="2.4.0.2" targetFramework="net40" />
   <package id="bass.flac" version="2.4.3.0" targetFramework="net40" />
