Add support for sending keep-alive commands in the IPTV source's RTSP plugin. Note the changes in the RTSP plugin itself include heavy refactoring of the code relating to LIVE555. All LIVE555 interaction is now handled from a single thread as recommended by LIVE555 documentation. Testing has been minimal, so expect a few bugs.

--- a/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.ini
+++ b/DirectShowFilters/MPIPTVSource/MPIPTVSource/MPIPTVSource.ini
@@ -109,8 +109,8 @@ RtspUdpPortRangeStart                       = 45000
 ; maximum UDP port used for communication
 RtspUdpPortRangeEnd                         = 46000
 
-; timeout for RTSP command responses (in ms)
-RtspCommandResponseTimeout                  = 500
+; timeout for opening connection (in ms)
+RtspOpenConnectionTimeout                   = 1000
 
 ; maximum attempts of opening connection
 RtspOpenConnectionMaximumAttempts           = 3
@@ -119,5 +119,9 @@ RtspOpenConnectionMaximumAttempts           = 3
 RtspSendCommandOptions                      = 1
 
 ; send the DESCRIBE command during connection establishment: 0 = don't send (eg. for compatibility), 1 = send
-; when the command is not sent a default SDP session description "v=0 t=0 0 a=type:broadcast a=recvonly m=video 0 RTP/AVP 33" is assumed
+; when the command is not sent a default SDP session description "v=0 t=0 0 a=type:broadcast a=recvonly m=video 0 RTP/AVP 33 a=control:<absolute URL>" is assumed
 RtspSendCommandDescribe                     = 1
+
+; periodically send an OPTIONS command to keep the session alive
+; this setting should be enabled for SAT>IP servers that don't handle RTCP receiver reports
+RtspKeepAliveWithOptions                    = 0
