--- a/DirectShowFilters/MPIPTVSource/MPIPTV_RTSP/MPIPTV_RTSP.vcxproj.filters
+++ b/DirectShowFilters/MPIPTVSource/MPIPTV_RTSP/MPIPTV_RTSP.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -24,9 +24,6 @@
     <ClInclude Include="MPIPTV_RTSP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RtspTaskScheduler.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MPIPTV_RTSP_Exports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -39,9 +36,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RtspTaskScheduler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
